// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleCacheItem /> should render when [missing=false] 1`] = `
<CacheItem__StyledSampleCacheItem>
  <Flex
    alignContent="stretch"
    alignItems="center"
    direction="row"
    justifyContent="flex-start"
    wrap="nowrap"
  >
    <i
      className="fas fa-archive fa-fw"
      style={
        Object {
          "fontSize": "24px",
        }
      }
    />
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={10}
      shrink={1}
    >
      <CacheItem__CacheItemLink
        to="/samples/bar/files/foo"
      >
        abc123
      </CacheItem__CacheItemLink>
      <small>
        Created 
        <RelativeTime
          time="2018-01-01T00:00:00.000000Z"
        />
      </small>
    </FlexItem>
  </Flex>
  <CacheItem__CacheItemRight>
    <div />
    <div>
      136.6MB
    </div>
  </CacheItem__CacheItemRight>
</CacheItem__StyledSampleCacheItem>
`;

exports[`<SampleCacheItem /> should render when [missing=true] 1`] = `
<CacheItem__StyledSampleCacheItem>
  <Flex
    alignContent="stretch"
    alignItems="center"
    direction="row"
    justifyContent="flex-start"
    wrap="nowrap"
  >
    <i
      className="fas fa-archive fa-fw"
      style={
        Object {
          "fontSize": "24px",
        }
      }
    />
    <FlexItem
      alignSelf={null}
      basis="auto"
      grow={0}
      pad={10}
      shrink={1}
    >
      <CacheItem__CacheItemLink
        to="/samples/bar/files/foo"
      >
        abc123
      </CacheItem__CacheItemLink>
      <small>
        Created 
        <RelativeTime
          time="2018-01-01T00:00:00.000000Z"
        />
      </small>
    </FlexItem>
  </Flex>
  <CacheItem__CacheItemRight>
    <div>
      <Badge__RedBadge>
        <Icon
          faStyle="fas"
          fixedWidth={false}
          name="exclamation-circle"
          pullRight={false}
        />
         Files Missing
      </Badge__RedBadge>
    </div>
    <div>
      136.6MB
    </div>
  </CacheItem__CacheItemRight>
</CacheItem__StyledSampleCacheItem>
`;
